1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/move_resize.c (Maximize): implemented negative offsets for
	maximize

1999-09-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (get_selectable_item_index):
	(get_selectable_item_from_section):
	(get_selectable_item_count):
	(menuShortcuts): Meta-Up/Down move to next separator

1999-08-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Slide.c (SlideWindow): it's possible to turn off the XFlush
	after each MoveResize (faster and looks better).

1999-08-31  Hippo

	* fvwm/move_resize.c: different method of doing XORPixmap (fails)
	* libs/Picture.{h,c}: DestroyPicture now frees the colors allocated
	by LoadPicture., New functions: UseDefaltVisual, UseFvwmVisual.

1999-08-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Slide.c (SlideWindow): new file and function for sliding
	animations and simple animated moves

1999-08-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Colorset.c (SetRectangleBackground): fixed stretching/tiling

	* libs/Graphics.c (CreateTiledPixmap): use depth argument instead of 1

	* fvwm/events.c (DispatchEvent): MoveOutline is no longer called from
	events.c; fixed multiple drawing/undrawing of xorpixmap.

1999-08-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Colorset.c (SetRectangleBackground): new function that allows to
	draw shaped colorset backgrounds into a rectangle.

	* libs/Graphics.c (CreateTiledPixmap): former CreateTiledMaskPixmap,
	takes depth argument

1999-08-29  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (size_menu_vertically): propagate menu style and tringle
	style to submenus

1999-08-28  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (AddToMenu): rewrote fix for label allocation bug

1999-08-29 Chris Rankin

	* fvwm/menus.c: Wall fixes (one unused variable, brackets around
      boolean expressions and removed a "*" from a pointer operation)
	* libs/Graphics.c: Wall fixes (CreateStretchPixmap returns None